src/test/regression_testing/test_files/Go/NPD/bad/test03.go
package main

import "fmt"

type test3_MyStruct struct {
    Value int
}

func test3_main() {
    var s *test_3MyStruct 
    fmt.Println(s.Value) 
}

func main() {
	test3_main()
}